# StreamCondor

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  bump_version.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  setup_dev.sh
.github/: copilot-instructions.md
.github/workflows/: publish.yml
doc/: README.md  architecture.md  configuration.md  data-flow.md  development.md
doc/images/: README.md
icons/: convert.py
src/: __init__.py  configuration.py  favicons.py  launcher.py  main.py  model.py  monitor.py  slhelper.py  sluser.py
src/model/: stream.py
src/streamcondor/: __init__.py  favicons.py  main.py  model.py  monitor.py  resources.py  slhelper.py
src/streamcondor/ui/: __init__.py  settings.py  stream.py  trayicon.py
src/ui/: settings.py  stream.py  trayicon.py
test/: README.md  __init__.py  conftest.py  run_tests.py  sample_config.json  test_configuration.py  test_configuration_more.py  test_favicons.py  test_helpers.py  test_launcher_args.py  test_model_additional.py  test_monitor.py  test_slhelper.py  test_stream_model.py  test_ui_settings_more_pytest.py  test_ui_settings_pytest.py  test_ui_settings_unittest.py  test_ui_stream_pytest.py  test_ui_stream_unittest.py  test_ui_tray_more_pytest.py  test_ui_tray_open_url_unittest.py  test_ui_tray_pytest.py  test_ui_tray_unittest.py
